# proyecto-tajamar

./: .pre-commit-config.yaml  app.py  conftest.py  pyproject.toml  requirements.txt  tareas.py  test.py  tools.py  ui.py  ui_text.py
