[tool.poetry]
name = "tajamar"
version = "0.0.0"
description = ""
authors = ["Joaquin Hernandez Martinez <starseeker.code@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "0.4.6"
iniconfig = "2.3.0"
markdown-it-py = "4.2.0"
mdurl = "0.1.2"
packaging = "26.2"
pluggy = "1.6.0"
pygments = "2.20.0"
pytest = "9.0.3"
rich = "15.0.0"
tabulate = "^0.10.0"
ruff = "^0.15.14"
pre-commit = "^4.6.0"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["."]
python_files = ["test.py", "test_*.py", "*_test.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
